/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package mobileharness.platform.android.logcat;

import "google/protobuf/timestamp.proto";

option java_package = "com.google.devtools.mobileharness.platform.android.logcat.proto";
option java_multiple_files = true;
option java_outer_classname = "LogcatMonitoringReportProto";

// Report generated by AndroidLogcatMonitoringDecorator.
message LogcatMonitoringReport {
  // Tye of event.
  enum CrashType {
    UNKNOWN_CRASH_TYPE = 0;
    ANDROID_RUNTIME = 1;
    NATIVE = 2;
    ANR = 3;
  }

  // Category of the end result of the test.
  enum Category {
    UNKNOWN_CATEGORY = 0;
    FAILURE = 1;
    ERROR = 2;
    IGNORED = 3;
  }

  // Crash event detected by the decorator.
  message CrashEvent {
    optional string process_name = 1;
    optional int32 pid = 2;
    optional CrashType crash_type = 3;
    optional Category category = 4;
    optional string log_lines = 5;
  }

  // Device event detected by the decorator.
  // Example: power button press, DNS resolution failure, etc.
  message DeviceEvent {
    optional string event_name = 1;
    optional google.protobuf.Timestamp timestamp = 2;
    optional string tag = 3;
    optional string log_lines = 4;
  }

  repeated CrashEvent crash_events = 1;
  repeated DeviceEvent device_events = 2;
}
